[package]
name = "vega_lite_5"
version = "0.8.0"
authors = [
    "David Bernard <david.bernard.31@gmail.com>",
    "François Mockers <mockersf@gmail.com>",
    "Thomas Aubry <github.thomaub@gmail.com>",
    "ptiza",
]
edition = "2021"
license = "Apache-2.0"
description = "rust api for vega-lite v5"
repository = "https://github.com/procyon-rs/vega_lite_5.rs"
readme = "README.md"
categories = ["visualization"]
keywords = ["visualization", "plot", "vega", "graphs", "charts"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_builder = "0.20"
derive_more = { version = "2", default-features = false, features = ["from"] }
showata = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }
ndarray = { version = "0.16", default-features = false, features = [
    "serde",
], optional = true }
csv = { version = "1", default-features = false, optional = true }
rulinalg = { version = "0.4", default-features = false, optional = true }
nalgebra = { version = "0.33", default-features = false, features = [
    "serde-serialize",
], optional = true }
polars = { version = "0.46", default-features = false, features = [
    "dtype-datetime",
    "lazy",
], optional = true }

[dev-dependencies]
csv = { version = "1", default-features = false }
ndarray-rand = { version = "0.15", default-features = false }
polars = { version = "0.46", default-features = false, features = ["csv"] }

[features]
show_vega = ["showata", "anyhow"]
default = ["show_vega", "csv", "ndarray"]
polars = ["dep:polars"]

[[example]]
name = "from_nalgebra"
required-features = ["nalgebra"]
[[example]]
name = "from_rulinalg"
required-features = ["rulinalg"]
[[example]]
name = "from_polars"
required-features = ["polars"]

[package.metadata.release]
pre-release-commit-message = ":rocket: (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = ":bookmark: {{version}}"
